--- a/new/about.css
+++ b/new/about.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
 }
+
 .container {
     width: 100%;
     margin: 0 auto;
@@ -15,20 +16,20 @@ body {
 .container > div{
     color: white;
 }
-#login{
+#explore{
     /* z-index: 100; */
     /* color: white; */
-    padding-left: 1200px;;
+    padding-left: 1100px;;
     padding-right: 70px;
-    font-size: 0.8em;
+    font-size: 0.9em;
     padding-top: 10px;
 }
 a{
     color: white;
 }
-#contact,#login,#vol{
+#About,#Contact{
     padding-right: 60px;
-    font-size: 0.8em;
+    font-size: 0.9em;
     padding-top: 10px;
 }
 a:hover{
@@ -38,6 +39,9 @@ a:hover{
 
 body{
     background-image: url('./images/concert.jpg');
+    display:grid;   
+    grid-template-columns: auto;
+    grid-template-rows:auto;
 }
 body > h1{
     font-size:8em;
@@ -68,22 +72,12 @@ body > div >h2{
 body >div >img{
     margin-left: 100px;;
 }
-#btn
-  {
-    text-decoration: none;
-    padding: 8px 38px;
-    border-radius:40px ;
-    background:#ff0000;
-    color:#ffffff;
-    font-size:1.5em;
-    z-index:9;
-    /* align-items: center;
-    transform:translateY(1000px);
-    transform: translateX(600px); */
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,250px);
-  }
-  
+.box{
+    padding-top:10px ;
+    height:fit-content;
+    width:fit-content;
+    background-color: white;
+}
+.box >img{
+    margin-left: 0%;
+}
